26 Aug 2007 Fix missed unfixed 31 Aug 2006 non-SCSI tape Locate bug - Fish
24 Aug 2007 Modify control registers by cr command - Roger Bowler
16 Aug 2007 Backout 28 Jul fix for LCS (fix was only meant for CTCI) - Fish
06 Aug 2007 Rework CPU execution loop - Greg
06 Aug 2007 Filled ipl, iplc, sysclear, sysreset in HELPTAB - Ivan Warren
06 Aug 2007 implement IPL PARM a la VM - Ivan Warren
29 Jul 2007 Fix PR# 34/tape bug causing crash if non-tape devinit - Fish
28 Jul 2007 Fix day-1 CTCI/LCS bug - Vince Weaver [vince@deater.net] by Fish
24 Jul 2007 Force command-reject (until we can get it coded right)
            for 3590 Medium Sense (x'C2') and Mode Sense (x'CF') - Fish
24 Jul 2007 Default to --blkid-32 and --no-erg for 3590 SCSI - Fish
24 Jul 2007 Fix tape Synchronize CCW (x'43') to do actual commit - Fish
24 Jul 2007 Fix Windows SCSI tape Locate and Read-Block-Id SNAFU - Fish
19 Jul 2007 Disable DIAG 308 Re-IPL feature until it is complete - Ivan Warren
21 Jun 2007 revert config_cpu.pat due to problems in testing - Greg
20 Jun 2007 3.05 release doc changes - Jay Maynard
18 Jun 2007 make 3990-6 default control unit for 3390 devices - Greg
18 Jun 2007 configure_cpu now returns when the CPU is fully configured - Greg
08 Jun 2007 Skip making CRW pending in S/370 mode - Kevin Leonard
06 Jun 2007 Fix SYNCHRONIZE_CPUS when numcpu > number of host processors - Greg
06 Jun 2007 Ignore suppress bit in FBA Locate CCW Byte 0 - H.U. - Ivan Warren
26 May 2007 Compare-and-Swap-and-Store feature - Roger Bowler
18 May 2007 Conditional SSKE feature - Roger Bowler
04 May 2007 Restore dasdtab.c RDC response circumvention to prevent command
            reject in DSF for X'0A' command to alternate track - Kevin Leonard
25 Apr 2007 Rename RSS instruction format as SSF - Roger Bowler
04 Apr 2007 Fix Locate Block & Read BlockId for SCSI tape inadvertently
            broken by 31 Aug 2006 preliminary 3590 support change - Fish