@@ -1,3 +1,4 @@
+28 Aug 2007 Fix many TUNSETIFF-EINVAL error messages - Greg
 26 Aug 2007 Fix missed unfixed 31 Aug 2006 non-SCSI tape Locate bug - Fish
 24 Aug 2007 Modify control registers by cr command - Roger Bowler
 16 Aug 2007 Backout 28 Jul fix for LCS (fix was only meant for CTCI) - Fish
